<resources>
    <string name="app_name">Voice Bridge</string>
    <string name="voice_bridge">Voice Bridge</string>
    <string name="welcome_to_voice_bridge">Welcome to Voice Bridge</string>
    <string name="connect_speak_and_grow_with_n_confidence">Connect, speak, and grow with \n confidence</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_text">Create Account</string>
    <string name="please_select_your_user_type">Please select your user type</string>
    <string name="child">Child</string>
    <string name="teacher">Teacher</string>
    <string name="child_registration">Child Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="teacher_registration">Teacher Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back button</string>
    <string name="let_s_practice_speaking_n_fun">Let’s Practice Speaking\n Fun!</string>
    <string name="level_1">Level 1 - Letters </string>
    <string name="level_2">Level 2 - Words</string>
    <string name="check_progress">Check Progress</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_talk">Let\'s Talk</string>
    <string name="talk_with_nsymbols">Talk With\nSymbols</string>
    <string name="little_nadventure">Little\nAdventure</string>
    <string name="learn_nknowledge">Learn\nKnowledge</string>
    <string name="let_s_talking_with_symbols">Let\'s Talking With Symbols!</string>
    <string name="quick_words">Quick Words</string>
    <string name="symbol_charts">Symbol Charts</string>
    <string name="todo">TODO</string>
    <string name="bottom">bottom</string>
    <string name="image_dashboard">image_dashboard</string>
    <string name="level_1_letters">Level 1 - Letters</string>
    <string name="let_s_speak">Let\'s Speak!</string>
    <string name="let_s_start_with_letters_say_each_n_letter_sound_out_loud_and_practice_n_speaking_clearly">Let’s start with letters! Say each\n letter sound out loud and practice\n speaking clearly.</string>
    <string name="word_sound">Word Sound</string>
    <string name="say">Say</string>
    <string name="speak_sound">Speak Sound</string>
    <string name="play_sound">Play Sound</string>
    <string name="next">Next</string>
    <string name="letter_sound">Letter Sound</string>
    <string name="level_2_words">Level 2 - Words</string>
    <string name="now_let_s_make_words_put_letters_n_together_and_practice_saying_whole_n_words">Now let’s make words! Put letters\n together and practice saying whole\n words.</string>
    <string name="let_s_do_education_therapyActivities">Let’s Learn and Have\nFun!</string>
    <string name="age6">Age 6</string>
    <string name="age7">Age 7</string>
    <string name="age8">Age 8</string>
    <string name="age9">Age 9</string>
    <string name="age10">Age 10</string>
    <string name="age11">Age 11</string>
    <string name="instruction_video">Instruction Video</string>
    <string name="level_3">Level 3 - Sentences</string>
    <string name="level_3_sentences">Level 3 - Sentences</string>
    <string name="now_let_s_make_sentences_put_words_n_together_and_practice_saying_whole_n_sentences">Now let’s make sentences! Put words\n together and practice saying whole\n sentences.</string>
    <string name="say_sentence">Say Sentence</string>
    <string name="ok">OK</string>
    <string name="listening">Listening...</string>
    <string name="processing">Processing...</string>
    <string name="refresh">refresh</string>
    <string name="speaker">speaker</string>
    <string name="Manage_nlessons">Manage \nLessons</string>

</resources>